2002-08-03  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: released 1.5.71 
	
	* lily/beam.cc (consider_auto_knees): rewrite function; now only
	consider horizontal knees. Fixes input/bugs/bizzarre-beam.ly

	* lily/syllable-group.cc (set_lyric_align): fix centering on note
	head for `normal' lyrics. This fixes input/bugs/lyrics-spacing.ly.

2002-08-02  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc (connect_beams): fix quarter note beams.

	* input/regression/beam-quarter.ly: new file.

2002-08-02  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* buildscripts/mf-to-table.py (postfixes): Reduce the line spacing
	in the font list.

2002-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/scm-option.cc: excorcise iostream.

	* lily/main.cc: remove iostream usage.

2002-08-02  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: make URL for printfilename option.

	* lily/beam.cc (position_with_maximal_common_beams): fix kneed
	beamlets. This fixes input/bugs/knee

	* ly/engraver-init.ly (HaraKiriStaffContext): switch off auto knee
	for hara kiri staffs.

	* lily/slur-engraver.cc (try_music): remove nested slur
	functionality. This fixes spurious warnings with the partcombiner.

2002-08-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parse-scm.cc (protected_ly_parse_scm): guile 1.4 compatibility.

2002-08-01 Rune Zedeler <rune@zedeler.dk>

	* lily/tab-note-heads-engraver.cc: add algorithm for automatically
	selecting frets when none given by user. Read property
	"minimumFret".

	* scm/translator-property-description.scm: Add "minimumFret"
	
	* mf/feta-eindelijk.mf: Changed layout of 16th and shorter rests
	to match the 8th rest. slanted 8th rest a bit more.
	WARNING: 8th rest and classical quarter rest exchanged.
	
2002-08-01  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scm/grob-description.scm (RehearsalMark): Add baseline-skip to
	handle multiline marks correctly.

2002-07-31  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
